添加JVM参数描述